--- a/app/templates/therapy/therapy_results.html
+++ b/app/templates/therapy/therapy_results.html
@@ -29,7 +29,7 @@
                     <h3> Emotional State Information </h3>
                 </div>
                 <div class="card-body">
-                    <p> super duper depressed </p>
+                    <p> {{ message }} </p>
                 </div>
             </div>
         </div>
