--- a/app/templates/patient_user/specific_session_page.html
+++ b/app/templates/patient_user/specific_session_page.html
@@ -53,9 +53,9 @@
                     <h3> Session Emotional Distribution Chart </h3>
                 </div>
                 <div class="card-body">
-                    <div class="container" style="width: 330px; height: 350px;">
-                        <div class="col-12">
-                            <canvas id="emotions_distribution"></canvas>
+                    <div class="container" style="width: 400px; height: 350px;">
+                        <div class="col-12 text-center">
+                            <canvas id="emotions_distribution" width="300" height="300"></canvas>
                         </div>
                     </div>
                 </div>
