--- a/app/templates/questionnaires/PHQ9.html
+++ b/app/templates/questionnaires/PHQ9.html
@@ -84,6 +84,8 @@
             <form id="questionnaire-form" method="POST" action="{{ url_for('main.phq9_questionnaire') }}">
                 {{ form.csrf_token}}
 
+                <h5> Recently, have you felt... </h5>
+
                 <div class="question" id="question1">
                     <label for="{{ form.question1.id }}">{{ form.question1.label}}</label>
                     <div class="radio-wrapper">
