--- a/app/templates/patient_user/patient_profile.html
+++ b/app/templates/patient_user/patient_profile.html
@@ -90,7 +90,7 @@
                 <div class="card-body">
                     {% if most_recent_session %}
                     <h5> Session Emotional State: {{ most_recent_session.emotional_state }}</h5>
-                    <div class="container" style="position: relative; height:35vh; width: 80vw;">
+                    <div class="container justify-content-center" style="position: relative; height:35vh; width: 80vw;">
                         <canvas id="recent_session_pie_chart" style="border: 1px black solid;"></canvas>
                     </div>
                         <!--<canvas id="recent_session_pie_chart" width="500" height="350" style="border:1px solid;"></canvas>-->
