--- a/app/templates/questionnaires/PHQ9.html
+++ b/app/templates/questionnaires/PHQ9.html
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <div class="card align-items-center" style="display: none;" id="phq9-form">
+    <div class="card align-items-center" style="display: none; width:100%" id="phq9-form">
         <h3 class="card-header text-center">PHQ-9 Questionnaire</h3>
         <div class="card-body text-center">
             <form id="questionnaire-form" method="POST" action="{{ url_for('main.phq9_questionnaire') }}">
