--- a/app/templates/therapist_user/therapist_dash.html
+++ b/app/templates/therapist_user/therapist_dash.html
@@ -6,7 +6,8 @@
     <div class="row">
         <div class="col-12">
             <div class="p-5 text-center bg-light">
-                <h1 class="mb-3"> {{ therapist.first_name}}'s Dashboard </h1>
+                <h1 class="mb-3"> Therapist Users Dashboard </h1>
+                <h3 class="mb-3"> Review your current patients and your conducted sessions from this screen</h3>
             </div>
         </div>
     </div>
@@ -48,7 +49,7 @@
                                 <td> {{ patient.first_name + " " + patient.surname }} </td>
                                 <td> {{ patient.email }} </td>
                                 <td>
-                                    <a href="{{ url_for('therapist.view_patient_details') }}" class="btn btn-secondary">View Patient Details</a>
+                                    <a href="{{ url_for('therapist.view_patient_details', patient_id = patient.id) }}" class="btn btn-secondary">View Patient Details</a>
                                 </td>
                             </tr>
                             {% endfor %}
@@ -98,7 +99,7 @@
                             {% endfor %}
                         </tbody>
                     </table>
-                    {% else %}
+                    {% elif conducted_sessions_data is none %}
                     <p> 
                         No sessions have currently been conducted by you. Once you have conducted at least one therapy session data with a patient 
                         data will appear here for further review.
