--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -66,7 +66,7 @@
                 <a class="nav-item nav-link" id="questionnaires" href="/questionnaires_page">Questionnaires</a>
             </div>
             <div class="navbar-nav ms-auto">
-                <a class="nav-item nav-link" id="profile" href="/profile_page">Profile</a>
+                <a class="nav-item nav-link" id="profile" href="{{ url_for('main.profile_page', patient_id = current_user.id) }}">Profile</a>
                 <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
             </div>
             {% elif current_user.is_authenticated and current_user.type == "therapist" %}
