Finally managed to resize the charts. If you want them to be truly responsive I think media queries will be needed (unfortunately)

--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -21,9 +21,9 @@
 <div class="container">
     <div class="row">
         <div class="col-6 mt-3">
-            <h4> Emotional Recognition Capability </h4>
+            <h2> Emotional Recognition Capability </h2>
             <p> 
-                This application aims to use an emotional recognition model in order to provide additional insight into mental health.
+                Lorem Ipsum Etc Etc...
             </p>
         </div>
     </div>
