--- a/app/templates/questionnaires/GAD7.html
+++ b/app/templates/questionnaires/GAD7.html
@@ -34,6 +34,7 @@
                 </div>
                 <div class="card-body">
                     <h5> Emotional State Captured: {{ emotional_state }}</h5>
+                    <p>{{ emotional_state_message }}</p>
                 </div>
             </div>
         </div>
