--- a/app/templates/therapy/therapy_results.html
+++ b/app/templates/therapy/therapy_results.html
@@ -39,8 +39,8 @@
                     <h2> Emotional Distribution Chart </h2>
                 </div>
                 <div class="card-body">
-                    <div class="div" width="640" height="480">
-                        <canvas id="pieChartCanvas" ></canvas>
+                    <div class="chart_container d-flex justify-content-center" style="height: 475px; width: 100%;">
+                        <canvas id="pieChartCanvas"></canvas>
                     </div>
                 </div>
             </div>
