--- a/app/templates/patient_user/previous_phq.html
+++ b/app/templates/patient_user/previous_phq.html
@@ -38,8 +38,30 @@
                 <div class="card-header">
                     <h3> Previous Attempts/Score Information </h3>
                 </div>
-                <div class="card-body">
-                    <p> Some info on scoring system I guess </p>
+                <div class="card-body text-center">
+                    <p> 
+                        In order to better understand your results below is a description of both the PHQ-9 scoring system and the emotional state scoring system
+                    </p>
+                    <div class="row">
+                        <div class="col-6">
+                            <h5> PHQ-9 Scoring </h5>
+                            <p> Minimal/No Depression: 0 - 4 </p>
+                            <p> Mild Depression: 5 - 9 </p>
+                            <p> Moderate Depression: 10 - 14 </p>
+                            <p> Moderately Severe Depression: 15 - 19 </p>
+                            <p> Severe Depression: 20 - 27 </p>
+                        </div>
+                        <div class="col-6">
+                            <h5> Emotional State Score </h5>
+                            <p>Extremely Negative: 0.75 - 1</p>
+                            <p>Moderately Negative: 0.50 - 0.75</p>
+                            <p>Slightly Negative: 0.25 - 0.50</p>
+                            <p>Neutral: 0.25 - -0.25</p>
+                            <p>Slightly Positive: -0.50 - -0.25 </p>
+                            <p>Moderately Positive: -0.75 - -0.50</p>
+                            <p>Extremely Positive: -1 - -0.75 </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
