--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -2,6 +2,15 @@
 
 {% block head %}
 
+<link rel="stylesheet" href="{{ url_for('static', filename='css/stylesheet.css') }}">
+
+<style>
+    .flex-continer {
+        background-color: #212429;
+        
+    }
+</style>
+
 {% endblock %}
 
 {% block content %}
@@ -9,7 +18,7 @@
 <div class="flex-container" style="overflow: hidden;">
     <div class="row">
         <div class="col-12">
-            <div class="p-5 text-center bg-light">
+            <div class="p-5 text-center bg-dark">
                 <h1 class="mb-3">Emotional Recognition Honours Application </h1>
                 <h4 class="mb-3"> Student: Gary Smith (S181972) </h4>
                 <h4 class="mb-3"> Supervisor: Huaglory Tianfield </h4>
