--- a/app/templates/questionnaires/GAD7.html
+++ b/app/templates/questionnaires/GAD7.html
@@ -44,7 +44,9 @@
                     <h3> Emotional Distribution Chart </h3>
                 </div> 
                 <div class="card-body">
-                    <canvas id="pieChartCanvas" width="640" height="480"></canvas>
+                    <div class="chart_container d-flex justify-content-center" style="height: 400px; width: 100%">
+                        <canvas id="pieChartCanvas"></canvas>
+                    </div>
                 </div> 
             </div>
         </div>
