Seperated logic of cropping faces from other pre-processing (normalisation, resizing, etc). Results in cleaner screenshots for the report

--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -4,21 +4,14 @@
 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/stylesheet.css') }}">
 
-<style>
-    .flex-continer {
-        background-color: #212429;
-        
-    }
-</style>
-
 {% endblock %}
 
 {% block content %}
 
-<div class="flex-container" style="overflow: hidden;">
+<div class="flex-container" style="overflow: hidden; background-color:#608DF7;">
     <div class="row">
         <div class="col-12">
-            <div class="p-5 text-center bg-dark">
+            <div class="p-5 text-center">
                 <h1 class="mb-3">Emotional Recognition Honours Application </h1>
                 <h4 class="mb-3"> Student: Gary Smith (S181972) </h4>
                 <h4 class="mb-3"> Supervisor: Huaglory Tianfield </h4>
