--- a/app/templates/patient_user/patient_profile.html
+++ b/app/templates/patient_user/patient_profile.html
@@ -7,6 +7,18 @@
 
 {% block content %}
 
+
+<div class="flex-container" style="overflow: hidden;">
+    <div class="row">
+        <div class="col-12">
+            <div class="p-5 text-center bg-light">
+                <h1 class="mb-3"> Patient Users Dashboard </h1>
+                <h3 class="mb-3"> Review data captured during your previous therapy sessions and questionnaire attempts </h3>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container">
     <div class="row mt-4 mb-4">
         <div class="col-6">
