--- a/app/templates/patient_user/previous_gad.html
+++ b/app/templates/patient_user/previous_gad.html
@@ -15,7 +15,7 @@
                     </p>
                     <div class="row">
                         <div class="col-6">
-                            <h5> Latest GAD Score </h5>
+                            <h5> Latest GAD-7 Score </h5>
                             <p> {{ most_recent.score }} </p>
                         </div>
                         <div class="col-6">
@@ -39,12 +39,33 @@
     </div>
     <div class="row">
         <div class="col-6">
-            <div class="card">
+            <div class="card text-center">
                 <div class="card-header text-center">
                     <h3> Previous Attempts/Score Information </h3>
                 </div>
                 <div class="card-body">
-                    <p> Some info on scoring system I guess </p>
+                    <p> 
+                        In order to better understand your results below is a description of both the GAD-7 scoring system and the emotional state scoring system
+                    </p>
+                    <div class="row">
+                        <div class="col-6">
+                            <h5> GAD-7 Scoring </h5>
+                            <p> Minimal/No Anxiety: 0 - 4 </p>
+                            <p> Mild Anxiety: 5 - 9 </p>
+                            <p> Moderate Anxiety: 10 - 14 </p>
+                            <p> Severe Anxiety: 15 - 21 </p>
+                        </div>
+                        <div class="col-6">
+                            <h5> Emotional State Score </h5>
+                            <p>Extremely Negative: 0.75 - 1</p>
+                            <p>Moderately Negative: 0.50 - 0.75</p>
+                            <p>Slightly Negative: 0.25 - 0.50</p>
+                            <p>Neutral: 0.25 - -0.25</p>
+                            <p>Slightly Positive: -0.50 - -0.25 </p>
+                            <p>Moderately Positive: -0.75 - -0.50</p>
+                            <p>Extremely Positive: -1 - -0.75 </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
