--- a/app/templates/patient_user/previous_phq.html
+++ b/app/templates/patient_user/previous_phq.html
@@ -5,24 +5,29 @@
 <div class="container">
     <div class="row mb-3 mt-3">
         <div class="col-6 md-12 sm-12">
-            <div class="card">
+            <div class="card text-center">
                 <div class="card-header">
                     <h3> Latest Recorded Scores </h3>
                 </div>
                 <div class="card-body">
+                    <p>
+                        Below you can see the latest PHQ-9 and latest emotional state score captured during the last PHQ-9 attempt
+                    </p>
                     <div class="row">
                         <div class="col-6">
-                            <h5> Latest Score Info </h5>
+                            <h5> Latest PHQ-9 Score </h5>
+                            <p> {{ most_recent.score }} </p>
                         </div>
                         <div class="col-6">
                             <h5> Latest Emotional State Info </h5>
+                            <p> {{ most_recent.emotional_state }} </p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col-6 md-12 sm-12">
-            <div class="card">
+            <div class="card text-center">
                 <div class="card-header">
                     <h3> Previous PHQ-9 Scores </h3>
                 </div>
@@ -34,7 +39,7 @@
     </div>
     <div class="row">
         <div class="col-6">
-            <div class="card">
+            <div class="card text-center">
                 <div class="card-header">
                     <h3> Previous Attempts/Score Information </h3>
                 </div>
